examples/failing/TypeError.purs
test = do
  var x = 0
  return x ++ "A"
